update description of results

--- a/results.ipynb
+++ b/results.ipynb
@@ -703,7 +703,7 @@
    "metadata": {},
    "source": [
     "# Association testing when the causal SNP is not typed\n",
-    "We take 1kg SNPs, filter for MAF > 0.01 in both populations and obtain 546k SNPs on CHR 2. We take 300 uniformly sampled SNPs as the causal SNP. For each SNP, we pick 40 nearest SNPs as a region and perform single causal SNP simulation as described above. We show the proportion of SNPs exceeding genome-wide significance with \n",
+    "We take 1kg SNPs, filter for MAF > 0.01 in both populations and obtain 546k SNPs on CHR 2. We take 300 uniformly sampled SNPs as the causal SNP. For each SNP, we pick 40 nearest SNPs as a region and perform single causal SNP simulation, with odds ratio 1.2, the same as the main figure. We show the proportion of SNPs exceeding genome-wide significance with \n",
     "- Figure 1: p-value of causal SNPs\n",
     "- Figure 2: minimum p-value based on the 40 tagging SNPs (masking the true causal SNP)\n",
     "\n",
